--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     background: rgba(255, 255, 255, 255);
 }
 
-/* Styling the top bar */
+/* Styling the top bar ssection */
 .top-bar {
     position: absolute;
     padding-left: 40px;
